Implement authentification for recruiter and tablebord
